--- a/package.json
+++ b/package.json
@@ -3,18 +3,27 @@
   "version": "1.0.0",
   "description": "an exercice in react",
   "main": "index.js",
+  "devDependencies": {},
   "scripts": {
-    "test": "test"
+    "start": "webpack-dev-server --inline --content-base . --history-api-fallback"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pepsinic/landing_page"
+  },
+  "author": "nicole verhagen",
   "license": "ISC",
   "dependencies": {
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "history": "^4.6.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-router": "^4.1.1"
+    "react-router": "^4.1.1",
+    "style-loader": "^0.18.2",
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.4.5"
   }
 }
